<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/logo" >
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="80dp"
        android:fadingEdge="none"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00A2FF"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#000000"
                android:gravity="center_vertical"
                android:paddingRight="5dp"
                android:paddingBottom="8dp" >

                <Button
                    android:id="@+id/btn_enter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/button_selector"
                    android:textColor="#000000"
                    android:padding="10dp"
                   
                    android:layout_centerVertical="true"
                    android:text="@string/enter" />

                <EditText
                    android:id="@+id/txt_search"
                    style="@style/SearchTextBox"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/btn_enter"
                    android:background="@drawable/search_text"
                    android:ems="10"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_your_keyword"
                    android:inputType="text" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/select_your_preference"
                android:textSize="15dp" />

            <Spinner
                android:id="@+id/spinner_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:prompt="@string/select_country" />

            <Spinner
                android:id="@+id/spinner_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:prompt="@string/select_state" />

            <Spinner
                android:id="@+id/spinner_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:prompt="@string/rating" />

            <EditText
                android:id="@+id/zip_code_text"
                style="@style/SearchTextBox"
                android:layout_margin="10dp"
                android:background="@drawable/search_text"
                android:ems="10"
                android:gravity="center_vertical"
                android:hint="@string/enter_zip"
                android:inputType="text" />

            <Button
                android:id="@+id/btn_go"
                android:layout_width="50dp"
                android:padding="8dp"
                android:background="@drawable/button_selector"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/go" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>